service-from-image/echo.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: echo
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
            env:
            - name: PORT
              value: "8080"
